cmake_minimum_required(VERSION 2.8)
project(snappy)

set(SRC snappy.c)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC})
FILE(GLOB files "snappy.h")
INSTALL(FILES ${files} DESTINATION include/)

INSTALL(TARGETS ${PROJECT_NAME}
        DESTINATION "lib"
        PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)


